envs  or firebase integration

--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
       ::-webkit-scrollbar-thumb:hover {
         background: #555;
       }
+      @keyframes slide-up {
+        from {
+          transform: translate(-50%, 100%);
+          opacity: 0;
+        }
+        to {
+          transform: translate(-50%, 0);
+          opacity: 1;
+        }
+      }
+      .animate-slide-up {
+        animation: slide-up 0.3s ease-out;
+      }
     </style>
     <script type="importmap">
       {
