--- a/index.html
+++ b/index.html
@@ -3,7 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Moco AI - Smart Chatbots</title>
+    <title>Nugnics - Smart Chatbots</title>
+    <meta
+      name="description"
+      content="Nugnics is a smart chatbot platform that helps you automate conversations, boost sales, and provide 24/7 support, all with one intelligent chatbot platform designed for your business."
+    />
+    <meta
+      name="keywords"
+      content="chatbot, ai, automation, sales, support, business"
+    />
+    <!-- <meta name="author" content="Nugnics" />
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="google" content="notranslate" />
+    <meta
+      name="google-site-verification"
+      content="google-site-verification=google-site-verification"
+    /> -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
