--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nugnics - Smart Chatbots</title>
+    <title>Tavrix - Smart Chatbots</title>
     <meta
       name="description"
-      content="Nugnics is a smart chatbot platform that helps you automate conversations, boost sales, and provide 24/7 support, all with one intelligent chatbot platform designed for your business."
+      content="Tavrix is a smart chatbot platform that helps you automate conversations, boost sales, and provide 24/7 support, all with one intelligent chatbot platform designed for your business."
     />
     <meta
       name="keywords"
       content="chatbot, ai, automation, sales, support, business"
     />
-    <!-- <meta name="author" content="Nugnics" />
+    <!-- <meta name="author" content="Tavrix" />
     <meta name="robots" content="index, follow" />
     <meta name="googlebot" content="index, follow" />
     <meta name="google" content="notranslate" />
